<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/login_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_image"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:hint="@string/EnterUserName"
                android:inputType="text"
                android:padding="4dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_userName"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:hint="@string/enterPassword"
                android:inputType="textPassword"
                android:padding="4dp" />

            <CheckBox
                android:id="@+id/checkRemember"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rememberMe"
                android:layout_below="@id/login_password"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="270dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/checkRemember"
                android:layout_marginEnd="250dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/pass"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"


                />

            <TextView
                android:id="@+id/Im_Admin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/checkRemember"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="260dp"
                android:text="@string/adminClickHere"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/Im_not_Admin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/checkRemember"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="290dp"
                android:text="@string/iAmNotAdmin"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Im_Admin"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/buttons"
                android:padding="4dp"
                android:text="@string/connect"
                android:textAllCaps="false"
                android:textColor="@color/cardview_light_background"
                android:textSize="24sp"
                tools:ignore="PrivateResource" />

            <TextView
                android:id="@+id/Sign_Up_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="23dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>