<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".MyActivitiesFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNewActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:background="@color/colorAccent"
        android:scrollbars="vertical"/>


</RelativeLayout>