...
    <string name="location_activity">מיקום הפעילות</string>
    <string name="activity_location">הכנס את רחוב הפעילות</string>
    <string name="remove_activity">מחיקת פעילות</string>
    <string name="enterPassword">...הכנס סיסמה</string>
    <string name="rememberMe">זכור אותי</string>
    <string name="iAmNotAdmin">אני לא מנהל</string>
    <string name="connect">התחבר</string>
    <string name="register">הרשמה</string>
    <string name="nameActivity">שם הפעילות</string>
    <string name="blablbal">blablbal</string>
    <string name="date">תאריך</string>
    <string name="location">מיקום</string>
    <string name="numPlayer">מספר שחקנים</string>
...
